fix: overflow of form

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,11 +1,13 @@
 .form {
-  max-width: 385px;
+  margin: 0;
 }
 
 .form__fieldset {
   margin: 0;
+  width: 385px;
   padding: 0;
   border: none;
+  box-sizing: border-box;
 }
 
 .form__label {
@@ -22,8 +24,8 @@
 .form__input {
   border: 1px solid #838383;
   margin-top: 8px;
-  color: #000;
   width: 385px;
+  color: #000;
   padding: 15px 20px;
   display: block;
   border-radius: 4px;
