--- a/blocks/header.css
+++ b/blocks/header.css
@@ -18,6 +18,7 @@
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
+  z-index: 2;
 }
 
 .header__span-accent {
@@ -35,6 +36,7 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  z-index: 2;
 }
 
 .header__image {
